--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
-  "pages": [
-    "pages/welcome/welcome",
-    "pages/post/post"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
-  }
-  
+    "pages": [
+        "pages/welcome/welcome",
+        "pages/post/post",
+        "pages/post/post-detail/post-detail"
+    ],
+    "window": {
+        "backgroundTextStyle": "normal",
+        "navigationBarBackgroundColor": "#405f80",
+        "navigationBarTitleText": "叮叮🐱 ",
+        "navigationBarTextStyle": "#fff"
+    }
+
 }
