--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
     "pages": [
-        "pages/welcome/welcome",
+        
         "pages/post/post",
-        "pages/post/post-detail/post-detail"
+        "pages/post/post-detail/post-detail",
+        "pages/welcome/welcome"
     ],
     "window": {
         "backgroundTextStyle": "normal",
