--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
     "pages": [
+        "pages/movies/movies",
         "pages/welcome/welcome",
         "pages/post/post",
-        "pages/post/post-detail/post-detail",
-        "pages/movies/movies"
+        "pages/post/post-detail/post-detail"
+
 
 
     ],
